--- a/src/main/resources/views/Stylesheet.css
+++ b/src/main/resources/views/Stylesheet.css
@@ -1,11 +1,17 @@
 
 
 
+/******** TABS  ********/
 .tab
 {
-
     -fx-pref-width: 150;
-    -fx-background-color: BLUE;
+    -fx-background-color: GREY;
+    -fx-font-size: 15;
+}
 
+
+.tab:hover
+{
+    -fx-background-color: Black;
 }
 
