--- a/src/main/resources/views/MainView.fxml
+++ b/src/main/resources/views/MainView.fxml
@@ -14,14 +14,14 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
-<AnchorPane prefHeight="700.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.groupId.controllers.MainController">
-   <TabPane prefHeight="700.0" prefWidth="600.0" stylesheets="@Stylesheet.css" tabClosingPolicy="UNAVAILABLE">
+<AnchorPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.groupId.controllers.MainController">
+   <TabPane prefHeight="700.0" prefWidth="1000.0" stylesheets="@Stylesheet.css" tabClosingPolicy="UNAVAILABLE">
      <tabs>
        <Tab text="Velkommen">
          <content>
            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" stylesheets="@Stylesheet.css">
                   <children>
-                           <Button layoutX="244.0" layoutY="490.0" onAction="#exitApplication" text="Avslutt">
+                           <Button layoutX="96.0" layoutY="489.0" onAction="#exitApplication" text="Avslutt">
                         <font>
                            <Font size="16.0" />
                         </font></Button>
@@ -41,8 +41,8 @@
                         <font>
                            <Font size="16.0" />
                         </font></Button>
-                     <TextFlow layoutX="279.0" layoutY="153.0" prefHeight="261.0" prefWidth="200.0" />
-                     <Text layoutX="168.0" layoutY="78.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Velkommen">
+                     <TextFlow layoutX="562.0" layoutY="150.0" prefHeight="411.0" prefWidth="270.0" />
+                     <Text layoutX="373.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Velkommen">
                         <font>
                            <Font size="40.0" />
                         </font>
@@ -55,22 +55,22 @@
          <content>
            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                   <children>
-                     <ListView fx:id="lstViewLokal" layoutX="29.0" layoutY="43.0" prefHeight="275.0" prefWidth="200.0" />
-                     <TextFlow fx:id="txtFlowLokal" layoutX="340.0" layoutY="86.0" prefHeight="326.0" prefWidth="200.0" />
-                     <Button layoutX="36.0" layoutY="358.0" mnemonicParsing="false" onAction="#btnFjernLokal" text="Fjern">
+                     <ListView fx:id="lstViewLokal" layoutX="30.0" layoutY="119.0" prefHeight="367.0" prefWidth="200.0" />
+                     <TextFlow fx:id="txtFlowLokal" layoutX="662.0" layoutY="125.0" prefHeight="326.0" prefWidth="200.0" />
+                     <Button layoutX="37.0" layoutY="511.0" mnemonicParsing="false" onAction="#btnFjernLokal" text="Fjern">
                         <font>
                            <Font size="16.0" />
                         </font></Button>
-                     <Button layoutX="170.0" layoutY="358.0" mnemonicParsing="false" onAction="#btnLeggTilLokal" text="Legg til">
+                     <Button layoutX="171.0" layoutY="511.0" mnemonicParsing="false" onAction="#btnLeggTilLokal" text="Legg til">
                         <font>
                            <Font size="16.0" />
                         </font></Button>
-                     <Button layoutX="96.0" layoutY="610.0" mnemonicParsing="false" onAction="#btnFullfoorLokal" text="Fullfør">
+                     <Button layoutX="423.0" layoutY="603.0" mnemonicParsing="false" onAction="#btnFullfoorLokal" text="Fullfør">
                         <font>
                            <Font size="16.0" />
                         </font>
                      </Button>
-                     <HBox layoutX="30.0" layoutY="503.0" prefHeight="80.0" prefWidth="200.0">
+                     <HBox layoutX="356.0" layoutY="471.0" prefHeight="80.0" prefWidth="209.0">
                         <children>
                            <VBox prefHeight="0.0" prefWidth="98.0">
                               <children>
@@ -100,6 +100,11 @@
                            </VBox>
                         </children>
                      </HBox>
+                     <Text layoutX="443.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Lokale">
+                        <font>
+                           <Font size="40.0" />
+                        </font>
+                     </Text>
                   </children></AnchorPane>
          </content>
        </Tab>
@@ -120,27 +125,27 @@
                            <Font size="16.0" />
                         </font>
                      </Text>
-                     <TextField fx:id="txtArrangementNavn" layoutX="79.0" layoutY="116.0" prefHeight="35.0" prefWidth="238.0" />
+                     <TextField fx:id="txtArrangementNavn" layoutX="101.0" layoutY="115.0" prefHeight="35.0" prefWidth="238.0" />
                      <Text layoutX="14.0" layoutY="290.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Type">
                         <font>
                            <Font size="16.0" />
                         </font>
                      </Text>
-                     <TextFlow fx:id="txtArrangementFlow" layoutX="362.0" layoutY="119.0" prefHeight="354.0" prefWidth="200.0" />
+                     <TextFlow fx:id="txtArrangementFlow" layoutX="540.0" layoutY="107.0" prefHeight="451.0" prefWidth="309.0" />
                      <Text layoutX="14.0" layoutY="332.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Artist">
                         <font>
                            <Font size="16.0" />
                         </font>
                      </Text>
-                     <TextField fx:id="txtArrangementArtist" layoutX="79.0" layoutY="309.0" prefHeight="35.0" prefWidth="238.0" />
+                     <TextField fx:id="txtArrangementArtist" layoutX="101.0" layoutY="308.0" prefHeight="35.0" prefWidth="238.0" />
                      <Text layoutX="14.0" layoutY="380.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Program">
                         <font>
                            <Font size="16.0" />
                         </font>
                      </Text>
-                     <TextField fx:id="txtArrangementProgram" layoutX="79.0" layoutY="357.0" prefHeight="35.0" prefWidth="238.0" />
-                     <ChoiceBox fx:id="cbKontaktperson" layoutX="113.0" layoutY="224.0" prefWidth="150.0" />
-                     <Text layoutX="164.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Lag Arrangement">
+                     <TextField fx:id="txtArrangementProgram" layoutX="101.0" layoutY="356.0" prefHeight="35.0" prefWidth="238.0" />
+                     <ChoiceBox fx:id="cbKontaktperson" layoutX="139.0" layoutY="224.0" prefWidth="150.0" />
+                     <Text layoutX="347.0" layoutY="57.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Lag Arrangement">
                         <font>
                            <Font size="40.0" />
                         </font>
@@ -160,7 +165,7 @@
                            <Font size="16.0" />
                         </font>
                      </Text>
-                     <TextField fx:id="txtBillPris" layoutX="78.0" layoutY="497.0" prefHeight="35.0" prefWidth="238.0" />
+                     <TextField fx:id="txtBillPris" layoutX="101.0" layoutY="496.0" prefHeight="35.0" prefWidth="238.0" />
                      <Text layoutX="13.0" layoutY="563.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ant. Plasser">
                         <font>
                            <Font size="16.0" />
@@ -174,15 +179,15 @@
                         </font>
                      </Button>
                      <TextFlow layoutX="370.0" layoutY="497.0" prefHeight="92.0" prefWidth="200.0" />
-                     <TextField fx:id="txtLokale" editable="false" layoutX="93.0" layoutY="401.0" prefHeight="35.0" prefWidth="238.0" />
-                     <TextField fx:id="txtArrangementType" editable="false" layoutX="78.0" layoutY="266.0" prefHeight="35.0" prefWidth="238.0" />
-                     <ChoiceBox fx:id="cbLokal" layoutX="113.0" layoutY="169.0" prefWidth="150.0" />
+                     <TextField fx:id="txtLokale" editable="false" layoutX="101.0" layoutY="401.0" prefHeight="35.0" prefWidth="238.0" />
+                     <TextField fx:id="txtArrangementType" editable="false" layoutX="101.0" layoutY="266.0" prefHeight="35.0" prefWidth="238.0" />
+                     <ChoiceBox fx:id="cbLokal" layoutX="139.0" layoutY="169.0" prefWidth="150.0" />
                      <Text layoutX="14.0" layoutY="607.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bill. Salg">
                         <font>
                            <Font size="16.0" />
                         </font>
                      </Text>
-                     <TextField fx:id="txtBillSalg1" layoutX="79.0" layoutY="583.0" prefHeight="35.0" prefWidth="238.0" />
+                     <TextField fx:id="txtBillSalg1" layoutX="101.0" layoutY="583.0" prefHeight="35.0" prefWidth="238.0" />
                   </children></AnchorPane>
             </content>
          </Tab>
