--- a/src/main/resources/views/Stylesheet.css
+++ b/src/main/resources/views/Stylesheet.css
@@ -4,9 +4,11 @@
 /******** TABS  ********/
 .tab
 {
-    -fx-pref-width: 150;
+    -fx-pref-width: 240;
+    /* -fx-pref-height: auto; */
     -fx-background-color: GREY;
-    -fx-font-size: 15;
+    -fx-font-size: 17;
+    -fx-text-alignment: CENTER;
 }
 
 
@@ -15,3 +17,7 @@
     -fx-background-color: Black;
 }
 
+.root
+{
+    -fx-background: BLUE;
+}
