--- a/src/main/resources/views/MainView.fxml
+++ b/src/main/resources/views/MainView.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -14,7 +15,7 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
-<AnchorPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.groupId.controllers.MainController">
+<AnchorPane prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.groupId.controllers.MainController">
    <TabPane prefHeight="700.0" prefWidth="1000.0" stylesheets="@Stylesheet.css" tabClosingPolicy="UNAVAILABLE">
      <tabs>
        <Tab text="Velkommen">
@@ -55,8 +56,8 @@
          <content>
            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                   <children>
-                     <ListView fx:id="lstViewLokal" layoutX="30.0" layoutY="119.0" prefHeight="367.0" prefWidth="200.0" />
-                     <TextFlow fx:id="txtFlowLokal" layoutX="662.0" layoutY="125.0" prefHeight="326.0" prefWidth="200.0" />
+                     <ListView fx:id="lstViewLokal" layoutX="30.0" layoutY="119.0" onMouseClicked="#txtFlowOnMouseClicked" prefHeight="367.0" prefWidth="200.0" />
+                     <TextArea fx:id="txtFlowLokal" editable="false" layoutX="400.0" layoutY="119.0" prefHeight="318.0" prefWidth="262.0" />
                      <Button layoutX="37.0" layoutY="511.0" mnemonicParsing="false" onAction="#btnFjernLokal" text="Fjern">
                         <font>
                            <Font size="16.0" />
@@ -65,12 +66,12 @@
                         <font>
                            <Font size="16.0" />
                         </font></Button>
-                     <Button layoutX="423.0" layoutY="603.0" mnemonicParsing="false" onAction="#btnFullfoorLokal" text="Fullfør">
+                     <Button fx:id="btnFullfoorLokalId" layoutX="423.0" layoutY="603.0" mnemonicParsing="false" onAction="#btnFullfoorLokal" text="Fullfør" visible="false">
                         <font>
                            <Font size="16.0" />
                         </font>
                      </Button>
-                     <HBox layoutX="356.0" layoutY="471.0" prefHeight="80.0" prefWidth="209.0">
+                     <HBox fx:id="hBoxNyttLokale" layoutX="356.0" layoutY="471.0" prefHeight="80.0" prefWidth="209.0" visible="false">
                         <children>
                            <VBox prefHeight="0.0" prefWidth="98.0">
                               <children>
