--- a/src/main/resources/views/MainView.fxml
+++ b/src/main/resources/views/MainView.fxml
@@ -55,8 +55,8 @@
            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="anchorPane" stylesheets="@Stylesheet.css">
                   <children>
                      <ListView fx:id="lstViewLokal" layoutX="30.0" layoutY="119.0" onMouseClicked="#txtFlowOnMouseClicked" prefHeight="367.0" prefWidth="200.0" />
-                     <TextArea fx:id="txtFlowLokal" editable="false" layoutX="513.0" layoutY="155.0" prefHeight="396.0" prefWidth="383.0" styleClass="text-area" stylesheets="@Stylesheet.css" />
-                     <TextArea fx:id="txtFlowLokalOverskrift" editable="false" layoutX="517.0" layoutY="86.0" prefHeight="76.0" prefWidth="373.0" styleClass="text-area" stylesheets="@Stylesheet.css" />
+                     <TextArea fx:id="txtFlowLokal" editable="false" layoutX="591.0" layoutY="141.0" prefHeight="87.0" prefWidth="267.0" styleClass="text-area" stylesheets="@Stylesheet.css" />
+                     <TextArea fx:id="txtFlowLokalOverskrift" editable="false" layoutX="593.0" layoutY="86.0" prefHeight="53.0" prefWidth="265.0" styleClass="text-area" stylesheets="@Stylesheet.css" />
                      <Button fx:id="btnFjernLokal" layoutX="37.0" layoutY="511.0" mnemonicParsing="false" onAction="#btnFjernLokal" text="Fjern">
                         <font>
                            <Font size="16.0" />
@@ -65,7 +65,7 @@
                         <font>
                            <Font size="16.0" />
                         </font></Button>
-                     <HBox fx:id="hBoxNyttLokale" layoutX="356.0" layoutY="471.0" prefHeight="138.0" prefWidth="209.0">
+                     <HBox fx:id="hBoxNyttLokale" layoutX="263.0" layoutY="272.0" prefHeight="138.0" prefWidth="209.0">
                         <children>
                            <VBox prefHeight="0.0" prefWidth="98.0">
                               <children>
@@ -84,7 +84,7 @@
                                        <Font size="16.0" />
                                     </font>
                                  </Text>
-                                 <Button fx:id="btnAvbrytLokal" mnemonicParsing="false" onAction="#btnFullfoorLokal" text="Fullfør">
+                                 <Button fx:id="btnAvbrytLokal" mnemonicParsing="false" onAction="#btnAvbrytLokal" text="Avbryt">
                                     <font>
                                        <Font size="16.0" />
                                     </font>
@@ -115,6 +115,14 @@
                            <Font size="40.0" />
                         </font>
                      </Text>
+                     <TableView fx:id="tableLokale" layoutX="490.0" layoutY="237.0" prefHeight="394.0" prefWidth="496.0">
+                       <columns>
+                         <TableColumn fx:id="TCNavnLokale" prefWidth="104.0" text="Navn" />
+                         <TableColumn fx:id="TCDatoLokale" prefWidth="128.0" text="Dato" />
+                           <TableColumn fx:id="TCPersonLokale" prefWidth="160.0" text="Kontaktperson" />
+                           <TableColumn fx:id="TCAntallLokale" prefWidth="103.0" text="Plasser" />
+                       </columns>
+                     </TableView>
                   </children></AnchorPane>
          </content>
        </Tab>
@@ -141,6 +149,7 @@
                            <Font size="16.0" />
                         </font>
                      </Text>
+                     <TextArea fx:id="txtArrangementProgram" layoutX="420.0" layoutY="132.0" prefHeight="86.0" prefWidth="237.0" />
                      <Text layoutX="349.0" layoutY="249.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Artist">
                         <font>
                            <Font size="16.0" />
@@ -189,7 +198,7 @@
                      <TextField fx:id="txtArrangementBillSalg" layoutX="813.0" layoutY="181.0" prefHeight="35.0" prefWidth="96.0" />
                      <ComboBox fx:id="cbLokal" layoutX="135.0" layoutY="88.0" onAction="#cbLokalOnAction" prefWidth="150.0" promptText="Legg til Lokale" />
                      <ComboBox fx:id="cbKontaktperson" layoutX="814.0" layoutY="92.0" prefHeight="27.0" prefWidth="174.0" promptText="Legg til person" />
-                     <TableView fx:id="tableArrangement" layoutX="1.0" layoutY="297.0" onMouseClicked="#tableArrangementOnMouseClicked" prefHeight="344.0" prefWidth="1000.0">
+                     <TableView fx:id="tableArrangement" layoutY="297.0" onMouseClicked="#tableArrangementOnMouseClicked" prefHeight="300.0" prefWidth="1000.0">
                        <columns>
                          <TableColumn fx:id="TCNavn" prefWidth="140.0" text="Navn" />
                          <TableColumn fx:id="TCLokale" prefWidth="127.0" text="Lokale" />
@@ -200,8 +209,12 @@
                            <TableColumn fx:id="TCAntall" prefWidth="145.0" text="Antall Ledig" />
                        </columns>
                      </TableView>
-                     <TextArea fx:id="txtArrangementProgram" layoutX="420.0" layoutY="132.0" prefHeight="86.0" prefWidth="237.0" />
-                     <Button layoutX="661.0" layoutY="243.0" mnemonicParsing="false" onAction="#btnRedigerArrangement" prefHeight="37.0" prefWidth="93.0" text="Rediger">
+                     <Button fx:id="btnRedigerArrangement" disable="true" layoutX="908.0" layoutY="599.0" mnemonicParsing="false" onAction="#btnRedigerArrangement" prefHeight="37.0" prefWidth="93.0" text="Rediger">
+                        <font>
+                           <Font size="16.0" />
+                        </font>
+                     </Button>
+                     <Button fx:id="btnSlettArrangement" disable="true" layoutX="798.0" layoutY="599.0" mnemonicParsing="false" onAction="#btnSlettArrangement" prefHeight="37.0" prefWidth="93.0" text="Slett">
                         <font>
                            <Font size="16.0" />
                         </font>
