--- a/src/main/resources/views/MainView.fxml
+++ b/src/main/resources/views/MainView.fxml
@@ -85,7 +85,7 @@
                            <Font size="40.0" />
                         </font>
                      </Text>
-                     <TableView fx:id="tableLokale" layoutX="490.0" layoutY="237.0" prefHeight="394.0" prefWidth="496.0">
+                     <TableView fx:id="tableLokale" layoutX="490.0" layoutY="237.0" prefHeight="394.0" prefWidth="496.0" stylesheets="@Stylesheet.css">
                        <columns>
                          <TableColumn fx:id="TCNavnLokale" prefWidth="104.0" text="Navn" />
                          <TableColumn fx:id="TCDatoLokale" prefWidth="128.0" text="Dato" />
@@ -173,7 +173,7 @@
                      <TextField fx:id="txtArrangementBillSalg" layoutX="813.0" layoutY="181.0" prefHeight="35.0" prefWidth="96.0" />
                      <ComboBox fx:id="cbLokal" layoutX="135.0" layoutY="88.0" onAction="#cbLokalOnAction" prefWidth="150.0" promptText="Legg til Lokale" />
                      <ComboBox fx:id="cbKontaktperson" layoutX="814.0" layoutY="92.0" prefHeight="27.0" prefWidth="174.0" promptText="Legg til person" />
-                     <TableView fx:id="tableArrangement" layoutY="297.0" onMouseClicked="#tableArrangementOnMouseClicked" prefHeight="300.0" prefWidth="1000.0">
+                     <TableView fx:id="tableArrangement" layoutY="297.0" onMouseClicked="#tableArrangementOnMouseClicked" prefHeight="300.0" prefWidth="1000.0" stylesheets="@Stylesheet.css">
                        <columns>
                          <TableColumn fx:id="TCNavn" prefWidth="140.0" text="Navn" />
                          <TableColumn fx:id="TCLokale" prefWidth="127.0" text="Lokale" />
@@ -199,7 +199,65 @@
          </Tab>
          <Tab fx:id="tabPanePerson" text="Kontaktperson">
             <content>
-               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="anchorPane" stylesheets="@Stylesheet.css" />
+               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" styleClass="anchorPane" stylesheets="@Stylesheet.css">
+                  <children>
+                     <Button layoutX="557.0" layoutY="572.0" mnemonicParsing="false" text="Rediger">
+                        <font>
+                           <Font size="16.0" />
+                        </font>
+                     </Button>
+                     <Button layoutX="228.0" layoutY="553.0" mnemonicParsing="false" text="Legg til">
+                        <font>
+                           <Font size="16.0" />
+                        </font>
+                     </Button>
+                     <Text layoutX="37.0" layoutY="141.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Navn">
+                        <font>
+                           <Font size="16.0" />
+                        </font>
+                     </Text>
+                     <Text layoutX="7.0" layoutY="186.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Telefonnummer">
+                        <font>
+                           <Font size="16.0" />
+                        </font>
+                     </Text>
+                     <Text layoutX="36.0" layoutY="236.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Epost">
+                        <font>
+                           <Font size="16.0" />
+                        </font>
+                     </Text>
+                     <Text layoutX="33.0" layoutY="279.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nettside">
+                        <font>
+                           <Font size="16.0" />
+                        </font>
+                     </Text>
+                     <Text layoutX="16.0" layoutY="434.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opplysninger">
+                        <font>
+                           <Font size="16.0" />
+                        </font>
+                     </Text>
+                     <TextField layoutX="154.0" layoutY="118.0" prefHeight="35.0" prefWidth="240.0" />
+                     <TextArea layoutX="156.0" layoutY="364.0" prefHeight="162.0" prefWidth="246.0" promptText="Skriv ned opplysninger og evt andre tilknytninger" />
+                     <Button layoutX="846.0" layoutY="572.0" mnemonicParsing="false" text="Slett">
+                        <font>
+                           <Font size="16.0" />
+                        </font>
+                     </Button>
+                     <TextField layoutX="154.0" layoutY="162.0" prefHeight="35.0" prefWidth="240.0" />
+                     <TextField layoutX="154.0" layoutY="213.0" prefHeight="35.0" prefWidth="240.0" />
+                     <TextField layoutX="154.0" layoutY="266.0" prefHeight="35.0" prefWidth="240.0" />
+                     <TableView layoutX="419.0" layoutY="115.0" prefHeight="208.0" prefWidth="546.0" stylesheets="@Stylesheet.css">
+                       <columns>
+                         <TableColumn prefWidth="75.0" text="Navn" />
+                         <TableColumn prefWidth="75.0" text="Telefon" />
+                           <TableColumn prefWidth="75.0" text="Epost" />
+                           <TableColumn prefWidth="75.0" text="Nettside" />
+                           <TableColumn prefWidth="135.0" text="Opplysning" />
+                           <TableColumn minWidth="50.0" prefWidth="112.0" text="Antall Arr." />
+                       </columns>
+                     </TableView>
+                     <TextArea layoutX="445.0" layoutY="338.0" prefHeight="200.0" prefWidth="495.0" />
+                  </children></AnchorPane>
             </content>
          </Tab>
          <Tab fx:id="tabPaneBillettsalg1" text="Billettsalg">
